# tophy-bot

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  IMPLEMENTATION.md  INDEX.md  LINTING.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
config/: default.json
scripts/: lint-fix.sh  lint.sh  setup-dev.sh
strategies/: macd_strategy.py  quantum_momentum_strategy.py  rsi_strategy.py
tests/: test_bot.py
tophy/: __init__.py
tophy/backtest/: __init__.py  engine.py
tophy/exchange/: __init__.py  base.py
tophy/strategy/: __init__.py  base_strategy.py  indicators.py
tophy/trader/: __init__.py  bot.py  position_manager.py
tophy/utils/: __init__.py  config.py  logger.py  models.py
